--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,10 @@
 <html>
 <body>
+{{range $obj := .Posts}} 
+  {{$obj.Title}}
+{{else}}
+  No posts
+{{end}}
 <form action='/asphalt/bar'>
 <input type='text' name='title'/>
 <input type='submit'/>
