add a build server for building html, and a data server that start init

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 {{else}}
   No posts
 {{end}}
-<form action='/asphalt/bar'>
+<form action='/artery/bar'>
 <input type='text' name='title'/>
 <input type='submit'/>
 </form>
